publish new post

--- a/_posts/2015-12-16-test-two.md
+++ b/_posts/2015-12-16-test-two.md
@@ -3,9 +3,10 @@ layout: post
 tags: 
   - workflow
   - jekyll
-published: false
+published: true
 title: Test Two
 ---
+
 
 This is a new test of the prose system for editing and posting files to a Jekyll site. Let's see if this one works better than my first go round.[^151216194]
 
